--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-streamlit>=1.28.0
-pandas>=1.5.0
-numpy>=1.24.0
-plotly>=5.15.0
-scikit-learn>=1.3.0
-interpret>=0.4.0
-alibi>=0.9.0
-openpyxl>=3.1.0
-pickle-mixin>=1.0.2
+streamlit==1.47.1
+pandas==2.3.1
+numpy==1.26.4
+matplotlib==3.9.4
+seaborn==0.13.2
+scikit-learn==1.6.1
+interpret==0.7.1
+alibi==0.9.6
+tensorflow==2.14.0
+plotly==6.2.0
+openpyxl==3.1.5
+joblib==1.5.1
+pickle-mixin==1.0.2
